Fixed scrollbars on Windows

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -18,6 +18,7 @@ html, body {
     flex-direction: row;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 /*Sidebar*/
